fix date cutoff

--- a/src/app/delete/delete.component.css
+++ b/src/app/delete/delete.component.css
@@ -15,7 +15,7 @@
 }
 
 .delete-option input {
-    width: 120px;
+    width: 130px;
 }
 
  .delete-option label {
